...
    var body: some View {
        if viewModel.watchlists.isEmpty {
            VStack {
                Image(systemName: "text.page.slash")
                    .resizable()
                    .frame(width: 50, height: 50)
                Text("No watchlist yet")
            }
            .font(.title)
            .opacity(0.5)
        } else {
            List {
                ForEach(viewModel.watchlists, id: \.symbol) { watchlist in
...
                await viewModel.loadWatchlist()
                await viewModel.loadUnselectedStocks()
            }
        } label: {
            VStack {
                Image(systemName: "trash.fill")
                Text("Delete")
            }
        }
        .tint(.red)
    }
}

...
