...
                                viewModel.isPresented = false
                            }
                        }
                        .background(Color(UIColor.systemGray4).opacity(0.6))
                    }
                }
                .navigationTitle("Stock List")
            }
        }
    }
}

#Preview {
...
